[project]
name = "ukb-mcp"
version = "0.1.0"
description = "UK Biobank data service with REST API and MCP interface"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "mcp[cli]>=1.27.0",
    "dxpy>=0.387.0",
    "pydantic-settings>=2.7.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
