[project]
name = "ukb-mcp"
version = "0.1.0"
description = "UK Biobank data service with REST API and MCP interface"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "mcp[cli]>=1.27.0",
    "dxpy>=0.387.0",
    "pydantic-settings>=2.7.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
